--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
         <title>Frontend Mentor | 3-column preview card component</title>
     </head>
     <body>
-        <footer class="attribution">
+        <footer>
             Challenge by
             <a
                 href="https://www.frontendmentor.io?ref=challenge"
                 target="_blank"
                 >Frontend Mentor</a
-            >. Coded by <a href="#">Your Name Here</a>.
+            >. Coded by
+            <a href="https://github.com/Karag2006">Martin Richter</a>.
         </footer>
         <script type="module" src="/main.js"></script>
     </body>
