--- a/index.html
+++ b/index.html
@@ -15,6 +15,47 @@
         <title>Frontend Mentor | 3-column preview card component</title>
     </head>
     <body>
+        <main>
+            <section class="card">
+                <img
+                    src="./assets/images/icon-sedans.svg"
+                    alt="Car Icon - Sedans"
+                />
+                <h2>Sedans</h2>
+                <p>
+                    Choose a sedan for its affordability and excellent fuel
+                    economy. Ideal for cruising in the city or on your next road
+                    trip.
+                </p>
+                <button>Learn More</button>
+            </section>
+            <section class="card">
+                <img
+                    src="./assets/images/icon-suvs.svg"
+                    alt="Car Icon - SUV's"
+                />
+                <h2>SUVs</h2>
+                <p>
+                    Take an SUV for its spacious interior, power, and
+                    versatility. Perfect for your next family vacation and
+                    off-road adventures.
+                </p>
+                <button>Learn More</button>
+            </section>
+            <section class="card">
+                <img
+                    src="./assets/images/icon-luxury.svg"
+                    alt="Car Icon - Luxury"
+                />
+                <h2>Luxury</h2>
+                <p>
+                    Cruise in the best car brands without the bloated prices.
+                    Enjoy the enhanced comfort of a luxury rental and arrive in
+                    style.
+                </p>
+                <button>Learn More</button>
+            </section>
+        </main>
         <footer>
             Challenge by
             <a
